--- a/index.html
+++ b/index.html
@@ -7,35 +7,17 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
+    <div class="nav-bar"></div>
+    
     <div id="app">
-      <div class="product">
-        <div class="product-image">
-          <img :src="image">
-        </div>
-        
-        <div class="product-info">
-          <h1>{{ product }}</h1>
-          <p v-if="inStock">In Stock</p>
-          <p v-else>Out of stock</p>
-
-          <ul>
-            <li v-for="detail in details">{{ detail }}</li>
-          </ul>
-
-          <div v-for="variant in variants" :key="variant.variantId">
-            <p>{{ variant.variantColor }}</p>
-          </div>
-
-          <div class="cart">
-            <p>Cart({{ cart }})</p>
-            <button v-on:click="addToCart">Add to cart</button>
-          </div>
-        </div>
+      <div class="cart">
+        <p>Cart({{ cart.length }})</p>
       </div>
+      <product :premium="premium" @add-to-cart="updateCart"></product>
     </div>
 
     <!-- Import Js -->
-    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
     <script src="./main.js"></script>
   </body>
-</html>
+</html> 
